# coursework6

./: .env.sample  pyproject.toml  users_data.json
blog/: admin.py  models.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_client_alter_newsletter_start_time_attempt_and_more.py  0003_newsletter_user.py  0004_client_user.py  0005_alter_newsletter_options.py
mailing/templates/mailing/: attempt_list.html  base.html  mail_confirm_delete.html  mail_list.html  newsletter_confirm_delete.html  newsletter_detail.html  newsletter_form.html  newsletter_list.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: login.html  user_form.html
