[tool.poetry]
name = "coursework6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
python-dotenv = "^1.0.1"
redis = "^5.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
